--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <h2 class="links__header">Можно попробовать найти</h2>
         <ul class="links__container">
           <li class="links__link">
+            <p>QA Балбес</p>
             <p class="links__title">Телеграм</p>
             <a class="linsk__link" href="http://t.me/slonopitek">@Slonopitek</a>
           </li>
